--- a/app/finances/templates/finances/income.html
+++ b/app/finances/templates/finances/income.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Income page</title>
   </head>
   <body>
     <form action="{% url 'finances:add_income' %}" method="post">
@@ -12,5 +12,6 @@
       <input name="income" />
       <input type="submit" value="Submit" />
     </form>
+    <a href="{% url 'finances:index' %}">Back to the index page?</a>
   </body>
 </html>
