--- a/app/finances/templates/finances/statistics.html
+++ b/app/finances/templates/finances/statistics.html
@@ -9,6 +9,6 @@
   <body>
     <a href="{% url 'finances:stat_income' %}">See your incomes</a>
   </br>
-    <a href="">See your outcomes</a>
+    <a href="{% url 'finances:stat_outcome' %}">See your outcomes</a>
   </body>
 </html>
