--- a/app/finances/templates/finances/period_outcome.html
+++ b/app/finances/templates/finances/period_outcome.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Period outcome</title>
   </head>
   <body>
+    {% if data_dict %}
     <h2>Your outcome between {{date_object_1}} and {{date_object_2}} is:</h2>
+    <table>
+      <tr>
+        <th>Category</th>
+        <th>Outcome</th>
+      </tr>
+      {% for key, value in data_dict.items %}
+      <tr>
+        <td>{{ key }}</td>
+        <td>{{ value }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+    <p>Your total outcome is {{ total_outcome }}</p>
+    {% else %}
+    <p>You didn't have any outcome between {{date_object_1}} and {{date_object_2}}</p>
+    {% endif %}
   </body>
 </html>
