ability to return to index page

--- a/app/finances/templates/finances/category.html
+++ b/app/finances/templates/finances/category.html
@@ -17,5 +17,6 @@
       <input name="outcome" />
       <input type="submit" value="Submit" />
     </form>
+    <a href="{% url 'finances:index' %}">Back to the homepage?</a>
   </body>
 </html>
