--- a/app/finances/templates/finances/outcome.html
+++ b/app/finances/templates/finances/outcome.html
@@ -25,5 +25,6 @@
       <input name="category" />
       <input type="submit" value="Submit" />
     </form>
+    <a href="{% url 'finances:index' %}">Back to the homepage?</a>
   </body>
 </html>
