--- a/app/finances/templates/finances/period_income.html
+++ b/app/finances/templates/finances/period_income.html
@@ -15,5 +15,6 @@
       You didn't have any income between {{date_object_1}} and {{date_object_2}}
     </p>
     {% endif %}
+    <a href="{% url 'finances:index' %}">Back to the homepage?</a>
   </body>
 </html>
