--- a/app/finances/templates/finances/income.html
+++ b/app/finances/templates/finances/income.html
@@ -14,6 +14,6 @@
       <input name="income" />
       <input type="submit" value="Submit" />
     </form>
-    <a href="{% url 'finances:index' %}">Back to the index page?</a>
+    <a href="{% url 'finances:index' %}">Back to the homepage?</a>
   </body>
 </html>
