--- a/app/finances/templates/finances/period_outcome.html
+++ b/app/finances/templates/finances/period_outcome.html
@@ -23,7 +23,11 @@
     </table>
     <p>Your total outcome is {{ total_outcome }}</p>
     {% else %}
-    <p>You didn't have any outcome between {{date_object_1}} and {{date_object_2}}</p>
+    <p>
+      You didn't have any outcome between {{date_object_1}} and
+      {{date_object_2}}
+    </p>
     {% endif %}
+    <a href="{% url 'finances:index' %}">Back to the homepage?</a>
   </body>
 </html>
