--- a/app/finances/templates/finances/stat_outcome.html
+++ b/app/finances/templates/finances/stat_outcome.html
@@ -26,5 +26,6 @@
       <br />
       <input type="submit" value="Submit" />
     </form>
+    <a href="{% url 'finances:index' %}">Back to the homepage?</a>
   </body>
 </html>
