--- a/app/finances/templates/finances/statistics.html
+++ b/app/finances/templates/finances/statistics.html
@@ -10,5 +10,7 @@
     <a href="{% url 'finances:stat_income' %}">See your incomes</a>
   </br>
     <a href="{% url 'finances:stat_outcome' %}">See your outcomes</a>
+  </br>
+    <a href="{% url 'finances:index' %}">Back to the homepage?</a>
   </body>
 </html>
