--- a/app/finances/templates/finances/stat_outcome.html
+++ b/app/finances/templates/finances/stat_outcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Choose date of you incomes</title>
+    <title>Choose date of you outcomes</title>
   </head>
   <body>
     <h2>You can choose time period here</h2>
